filechooser: Fix leak when a shortcut disappears from the filesystem

https://bugzilla.gnome.org/show_bug.cgi?id=432386